# RemoteRun

./: .gitignore  ANALYSIS.md  AdvancedRunSysCmd.cmd  PROMPT_GUIDE.md  README.md  RemoteRun.slnx  SYSTEM.cfg  readme.txt  setup.iss
.github/workflows/: cross-platform-build.yml
RemoteRun/: NativeApi.cs  Options.cs  Program.cs  README.md  RemoteRun.csproj  ServiceRunner.cs  ServiceWorker.cs  TokenRunner.cs
src/SysExec/: CMakeLists.txt  SysExec.cpp
